Migrates mixin nomenclature to match the component template, updates the README, breaks Gulp tasks into separate files.

--- a/dev/styles/h2-version-component-breadcrumb.scss
+++ b/dev/styles/h2-version-component-breadcrumb.scss
@@ -22,17 +22,17 @@
 // $H2VER is replaced during the Gulp build script with the current component version, set in Gulpfile.js, before Sass is compiled.
 [data-h2-breadcrumb-$H2VER] {
     // Load the component's unique reset styles.
-    @include h2ComponentBreadcrumbReset();
+    @include h2-component-breadcrumb-reset();
     // Load the core.
-    @include core.h2UniversalReset;
+    @include core.h2-universal-reset;
     // Load the generic component mixin.
-    @include h2ComponentBreadcrumbGeneric();
+    @include h2-component-breadcrumb-generic();
 }
 
 // Load the custom breadcrumb mixin with its respective theme variables.
 @each $colorKey, $colorValue in maps.$color-map {
     [data-h2-breadcrumb-$H2VER*="#{$colorKey}"] {
-        @include h2ComponentBreadcrumbCustom(
+        @include h2-component-breadcrumb-custom(
             $color: $colorValue, 
             $line-height: var.$line-height, 
             $margin: var.$margin
